[gd_scene load_steps=16 format=3 uid="uid://bjns4ocojvbog"]

[ext_resource type="Script" path="res://scripts/Cat.gd" id="1_it10l"]
[ext_resource type="Texture2D" uid="uid://b3ghu8jvtfgo3" path="res://textures/cats/cat_base.png" id="2_1blq3"]
[ext_resource type="Shader" path="res://shaders/PaletteSwap.gdshader" id="2_hnpcm"]
[ext_resource type="Texture2D" uid="uid://dpg0u0fsa07dj" path="res://textures/cats/cat_colors/cat_color_lut_1.png" id="3_4b5od"]
[ext_resource type="Texture2D" uid="uid://b2x08qb867uex" path="res://textures/cats/cat_base_lut.png" id="4_dkuhs"]
[ext_resource type="Texture2D" uid="uid://bxoje4gn2jpu0" path="res://textures/light.png" id="4_fuo88"]
[ext_resource type="Texture2D" uid="uid://jrxinsu6jr8a" path="res://textures/cats/cat_eyes_closed_lut.png" id="5_wb8yo"]
[ext_resource type="Texture2D" uid="uid://b65c7mpcyn7kw" path="res://textures/cats/cat_eyes_closed.png" id="7_xm0vm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pea36"]
radius = 56.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_f54wm"]
resource_local_to_scene = true
shader = ExtResource("2_hnpcm")
shader_parameter/skip_first_row = true
shader_parameter/use_palette_alpha = false
shader_parameter/fps = 6.0
shader_parameter/palette = ExtResource("3_4b5od")

[sub_resource type="SpriteFrames" id="SpriteFrames_hrfad"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_dkuhs")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_wb8yo")
}, {
"duration": 1.0,
"texture": ExtResource("4_dkuhs")
}],
"loop": false,
"name": &"eyes_closed",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_ttinr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_1blq3")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_xm0vm")
}, {
"duration": 1.0,
"texture": ExtResource("2_1blq3")
}],
"loop": false,
"name": &"eyes_closed",
"speed": 5.0
}]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_bc4ia"]
blend_mode = 1

[sub_resource type="CircleShape2D" id="CircleShape2D_25wiu"]
radius = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_owm8i"]
radius = 72.0

[node name="Cat" type="CharacterBody2D" groups=["cats"]]
z_index = 1
collision_priority = 5.0
input_pickable = true
script = ExtResource("1_it10l")

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_pea36")

[node name="Textures" type="Node2D" parent="."]
scale = Vector2(0.25, 0.25)

[node name="CatSprite" type="AnimatedSprite2D" parent="Textures"]
texture_filter = 1
material = SubResource("ShaderMaterial_f54wm")
sprite_frames = SubResource("SpriteFrames_hrfad")
autoplay = "default"

[node name="CatHighlights" type="AnimatedSprite2D" parent="Textures"]
texture_filter = 1
material = SubResource("ShaderMaterial_f54wm")
sprite_frames = SubResource("SpriteFrames_ttinr")
autoplay = "default"

[node name="CatShadow" type="Sprite2D" parent="Textures"]
modulate = Color(0, 0, 0, 0.490196)
show_behind_parent = true
position = Vector2(16, 16)
texture = ExtResource("4_dkuhs")

[node name="CatLight" type="Sprite2D" parent="Textures"]
modulate = Color(0, 1, 1, 0)
material = SubResource("CanvasItemMaterial_bc4ia")
scale = Vector2(6, 6)
texture = ExtResource("4_fuo88")

[node name="PatArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PatArea"]
position = Vector2(-40, 40)
shape = SubResource("CircleShape2D_25wiu")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="PatArea"]
position = Vector2(0, 40)
shape = SubResource("CircleShape2D_25wiu")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="PatArea"]
position = Vector2(40, 40)
shape = SubResource("CircleShape2D_25wiu")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="PatArea"]
position = Vector2(40, 0)
shape = SubResource("CircleShape2D_25wiu")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="PatArea"]
shape = SubResource("CircleShape2D_25wiu")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="PatArea"]
position = Vector2(-40, 0)
shape = SubResource("CircleShape2D_25wiu")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="PatArea"]
position = Vector2(-40, -40)
shape = SubResource("CircleShape2D_25wiu")

[node name="CollisionShape2D8" type="CollisionShape2D" parent="PatArea"]
position = Vector2(0, -40)
shape = SubResource("CircleShape2D_25wiu")

[node name="CollisionShape2D9" type="CollisionShape2D" parent="PatArea"]
position = Vector2(40, -40)
shape = SubResource("CircleShape2D_25wiu")

[node name="ChargeArea" type="Area2D" parent="."]
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChargeArea"]
shape = SubResource("CircleShape2D_owm8i")

[node name="Raycasts" type="Node2D" parent="."]

[node name="RayCastTop" type="RayCast2D" parent="Raycasts"]
target_position = Vector2(0, -64)

[node name="RayCastBottom" type="RayCast2D" parent="Raycasts"]
target_position = Vector2(0, 64)

[node name="RayCastLeft" type="RayCast2D" parent="Raycasts"]
target_position = Vector2(-64, 0)

[node name="RayCastRight" type="RayCast2D" parent="Raycasts"]
target_position = Vector2(64, 0)

[node name="Timers" type="Node" parent="."]

[node name="MoveTimer" type="Timer" parent="Timers"]
process_callback = 0
wait_time = 2.0
one_shot = true

[node name="MoveWaitTimer" type="Timer" parent="Timers"]
process_callback = 0
wait_time = 1.5
one_shot = true

[node name="PowerGainTimer" type="Timer" parent="Timers"]
process_callback = 0
autostart = true

[node name="BlinkTimer" type="Timer" parent="Timers"]
process_callback = 0

[connection signal="mouse_entered" from="PatArea" to="." method="_on_pat_area_mouse_entered"]
[connection signal="area_entered" from="ChargeArea" to="." method="_on_charge_area_area_entered"]
[connection signal="area_exited" from="ChargeArea" to="." method="_on_charge_area_area_exited"]
[connection signal="timeout" from="Timers/MoveTimer" to="." method="_on_move_timer_timeout"]
[connection signal="timeout" from="Timers/MoveWaitTimer" to="." method="_on_move_wait_timer_timeout"]
[connection signal="timeout" from="Timers/PowerGainTimer" to="." method="_on_power_gain_timer_timeout"]
[connection signal="timeout" from="Timers/BlinkTimer" to="." method="_on_blink_timer_timeout"]
